# attackmate

./: .attackmate.yml  .gitignore  .penpal.yml  .pre-commit-config.yaml  .pylintrc  .python-version  .swm  .swn  .swo  Dockerfile  Jenkinsfile  README.md  SECURITY.md  baseexecutor.py  create_hashes.py  example.yml  index.html  main.py  playbook.yml  playbook2.yml  pyproject.toml  requirements.txt  schemas.py  setup.py  shellexecutor.py
.github/: pull_request_template.md
development/: .buildinfo  about.html  basic.html  genindex.html  how.html  index.html  objects.inv  py-modindex.html  readme_link.html  remote.html  remote_api_intro.html  search.html  searchindex.js
docs/: Dockerfile  requirements.txt
examples/: example_config.yml  http-put_example.yml  include.yml  only_if.yml  regex.yml  remote_playbook.yml  remote_single_commands.yml  ssh_example.yml  upgrade_to_meterpreter.yml  webdemo.yml  webserv.yml
hackhelfer/: __main__.py  baseexecutor.py  hackhelfer.py  msfexecutor.py  schemas.py  shellexecutor.py  sleepexecutor.py
images/: attackmate-schema.drawio
main/: .buildinfo  about.html  basic.html  genindex.html  how.html  index.html  objects.inv  py-modindex.html  readme_link.html  remote_api_intro.html  search.html  searchindex.js
penpal/: .msfsessionstore.py.swp  __main__.py  baseexecutor.py  debugexecutor.py  metadata.py  msfexecutor.py  msfsessionexecutor.py  msfsessionstore.py  penpal.py  regexexecutor.py  schemas.py  shellexecutor.py  sliverexecutor.py  sliverimplantexecutor.py  sliversessionexecutor.py  sshexecutor.py  tempfileexecutor.py  variablestore.py  varparse.py
playbooks/: README.md
protobuf/: README.md  attackmate_service.proto  base_command.proto  command.proto  common.proto  debug_command.proto  father_command.proto  http_client_command.proto  include_command.proto  json_command.proto  loop_command.proto  msf_module_command.proto  msf_payload_command.proto  msf_session_command.proto  playbook.proto  regex_command.proto  setvar_command.proto  sftp_command.proto  shell_command.proto  sleep_command.proto  sliver_generate_command.proto  sliver_listener_command.proto  sliver_session_command.proto  ssh_command.proto  tempfile_command.proto  vnc_command.proto  webserv_command.proto
remote/: attackmate_service_pb2.py  attackmate_service_pb2.pyi  attackmate_service_pb2_grpc.py  base_command_pb2.py  base_command_pb2.pyi  base_command_pb2_grpc.py  client.py  command_pb2.py  command_pb2.pyi  command_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  debug_command_pb2.py  debug_command_pb2.pyi  debug_command_pb2_grpc.py  father_command_pb2.py  father_command_pb2.pyi  father_command_pb2_grpc.py  http_client_command_pb2.py  http_client_command_pb2.pyi  http_client_command_pb2_grpc.py  include_command_pb2.py  include_command_pb2.pyi  include_command_pb2_grpc.py  json_command_pb2.py  json_command_pb2.pyi  json_command_pb2_grpc.py  loop_command_pb2.py  loop_command_pb2.pyi  loop_command_pb2_grpc.py  msf_module_command_pb2.py  msf_module_command_pb2.pyi  msf_module_command_pb2_grpc.py  msf_payload_command_pb2.py  msf_payload_command_pb2.pyi  msf_payload_command_pb2_grpc.py  msf_session_command_pb2.py  msf_session_command_pb2.pyi  msf_session_command_pb2_grpc.py  (+40 more)
remote_gql/: README.md  client.py  schema.py  server.py
remote_rest/: README.md  auth_utils.py  client.py  create_hashes.py  log_utils.py  (+5 more)
(+1497 files in other folders)
