[project]
name = "penpal"
authors = [
    {name = "Wolfgang Hotwagner", email = "wolfgang.hotwagner@ait.ac.at"},
]
description = "PenPal is an attack orchestration tool that executes full attack-chains based on playbooks."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Pentest", "Attack", "Orchestration", "Hacking", "Simulating", "Attackchain"]
license = {text = "GPL-3.0"}
dependencies = [
    "pydantic ~= 1.10",
    "colorlog",
    "pymetasploit3",
    "pyaml",
    "paramiko",
    "sliver-py"
]
dynamic = ["version"]

[project.scripts]
penpal = "penpal.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = ["penpal"]
